--- a/Assignment 9/portfolio/package.json
+++ b/Assignment 9/portfolio/package.json
@@ -3,11 +3,13 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "tailwind": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch"
     },
     "devDependencies": {
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
     }
 }
